--- a/audio-player/style.scss
+++ b/audio-player/style.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -12,10 +11,11 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh; /* Это важно для "sticky footer" */
-}
-body a {
-  color: black;
-  text-decoration: none;
+
+  a {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 .wrapper {
@@ -23,17 +23,21 @@ body a {
   /* Ваш стиль для контейнера контента */
 }
 
-.footer .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #ffffff;
-  margin: 15px 80px;
-  border: 1px solid #008080; /* Цвет рамки и толщина */
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
-}
-.footer .container img {
-  width: 100px;
-  height: 100px;
+.footer {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #ffffff;
+
+    margin: 15px 80px;
+    border: 1px solid #008080; /* Цвет рамки и толщина */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
+
+    img {
+      width: 100px;
+      height: 100px;
+    }
+  }
 }
