--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -13,9 +13,22 @@ body {
   flex-direction: column;
   min-height: 100vh; /* Это важно для "sticky footer" */
 }
+@font-face {
+  font-family: "Fixedsys";
+  src: url("./source/fonts/Fixedsys_Excelsior_3.01_Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 body a {
   color: black;
   text-decoration: none;
+  font-family: "Fixedsys";
+}
+body span {
+  font-family: "Fixedsys";
+}
+body p {
+  font-family: "Fixedsys";
 }
 
 .wrapper {
@@ -23,13 +36,29 @@ body a {
   /* Ваш стиль для контейнера контента */
 }
 
+.footer .footer-line {
+  background-color: #001f7e;
+  border: 2px solid #e0e0e0;
+  height: 20px;
+  margin: 0 auto;
+  margin: 0 80px;
+}
+.footer .footer-line span {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: #cbd3e0;
+}
+.footer .footer-line span img {
+  width: 20px;
+}
 .footer .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   background-color: #ffffff;
-  margin: 15px 80px;
+  margin: 0 80px 15px;
   border: 1px solid #008080; /* Цвет рамки и толщина */
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
 }
