--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -34,6 +34,74 @@ body p {
 .wrapper {
   flex-grow: 1; /* Растягиваем контент, чтобы заполнить оставшееся пространство */
   /* Ваш стиль для контейнера контента */
+  display: flex;
+  align-items: center;
+}
+.wrapper .main {
+  width: 100%;
+  height: 100%;
+}
+.wrapper .main .winamp {
+  margin: 0 auto;
+  background-color: #515462;
+  width: 600px;
+  height: 200px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
+  border: 2px solid #323448; /* Задаём стиль, толщину и цвет рамки */
+}
+.wrapper .main .winamp-head {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 50px;
+}
+.wrapper .main .winamp-head .icon-border {
+  background-color: red;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #323448;
+}
+.wrapper .main .winamp-head .icon-border img {
+  width: 100%;
+  height: 100%;
+}
+.wrapper .main .winamp-head .name-track {
+  background: #0d0b0b;
+  margin: 0 auto;
+  width: 350px;
+  border: 3px solid #323448;
+}
+.wrapper .main .winamp-head .name-track span {
+  padding-left: 5px;
+  color: #5bb55c;
+}
+.wrapper .main .track-line {
+  margin: 0 auto;
+  margin-top: 15px;
+}
+.wrapper .main .track-line input {
+  display: flex;
+  background-color: #31304f;
+  width: 550px;
+  height: 20px;
+  accent-color: rgba(249, 249, 250, 0.32);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
+  border: 2px solid #1f2032;
+  opacity: 0.5;
+  transition: opacity 0.2s;
+}
+.wrapper .winamp-controls {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+  margin: 0 auto;
+}
+.wrapper .winamp-controls div {
+  cursor: pointer;
 }
 
 .footer .footer-line {
@@ -41,7 +109,8 @@ body p {
   border: 2px solid #e0e0e0;
   height: 20px;
   margin: 0 auto;
-  margin: 0 80px;
+  margin: 0 81px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Тень */
 }
 .footer .footer-line span {
   display: flex;
@@ -50,7 +119,7 @@ body p {
   color: #cbd3e0;
 }
 .footer .footer-line span img {
-  width: 20px;
+  width: 18px;
 }
 .footer .container {
   display: flex;
